Removing preview features flag